--- a/KotaPalace/Resources/layout/fragment_reset_password.xml
+++ b/KotaPalace/Resources/layout/fragment_reset_password.xml
@@ -41,7 +41,6 @@
             android:id="@+id/InputResetEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLength="20" 
             android:inputType="textEmailAddress"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -50,7 +49,7 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email Address"
+        android:hint="Password"
         android:layout_margin="20dp"
         android:layout_below="@id/reset_email_txt">
 
@@ -58,8 +57,7 @@
             android:id="@+id/InputResetPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLength="20" 
-            android:inputType="textEmailAddress"/>
+            android:inputType="textPassword"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
